Fixed spacing issues on about page

--- a/css/index.css
+++ b/css/index.css
@@ -788,6 +788,7 @@ header .header {
   line-height: 5.6rem;
   font-family: "DM Serif Display", serif;
   color: #36536b;
+  margin-left: 9.5rem;
   width: 56rem;
   margin-bottom: 10rem;
 }
