--- a/less/about.less
+++ b/less/about.less
@@ -30,7 +30,9 @@ header .header {
 
 #__payapi-about .content h1 {
   .h2();
+  margin-left: 9.5rem;
   width: 56rem;
+
   margin-bottom: 10rem;
 }
 
